--- a/proto-front/src/styles/App.css
+++ b/proto-front/src/styles/App.css
@@ -12,7 +12,27 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.readonly-text {
+    border: none;           /* Supprime la bordure */
+    outline: none;          /* Supprime le contour au focus */
+    resize: none;           /* Empêche le redimensionnement */
+    background: transparent;/* Fond transparent */
+    width: 100%;            /* Largeur complète (optionnel) */
+    font-size: 5rem;        /* Taille du texte */
+    text-align: center;
+    color: #222;            /* Couleur du texte */
+    font-family: inherit; /* Même police que le reste */
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.logo {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 120px;         /* Ajuste la taille si tu veux */
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
