--- a/front/src/styles/Maison.css
+++ b/front/src/styles/Maison.css
@@ -9,3 +9,50 @@
     border: 2px solid #000000;
     background-color: #fff;
 }
+
+.conteneur-maison-boutons {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.conteneur-etage {
+    position: absolute;
+    left: 310px;
+    top: 2px;
+    display: flex;
+    flex-direction: column;
+}
+
+.bouton-etage {
+    margin-bottom: 8px;
+    padding: 10px 10px;
+    background-color: lightgrey;
+    color: black;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.bouton-etage.actuel {
+    background-color: darkcyan;
+    color: white;
+}
+
+.conteneur-sauvegarde {
+    display: flex;
+    justify-content: center;
+}
+
+.bouton-sauvegarde {
+    margin-top: 5px;
+    padding: 5px 20px;
+    background-color: green;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
+    border-radius: 5px;
+}
